--- a/css/custom.css
+++ b/css/custom.css
@@ -36,3 +36,9 @@
   top: 10px;
 }
 /* End of #sidebarCollapse styles */
+
+@media (max-width: 768px) {
+  #sidebar .custom-menu {
+    display: none;
+  }
+}
